; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_namedb.c_nouveau_namedb_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_namedb.c_nouveau_namedb_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_handle = type { i32, %struct.nouveau_object*, %struct.nouveau_namedb* }
%struct.nouveau_object = type { i32 }
%struct.nouveau_namedb = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nouveau_namedb_remove(%struct.nouveau_handle* %0) #0 {
  %2 = alloca %struct.nouveau_handle*, align 8
  %3 = alloca %struct.nouveau_namedb*, align 8
  %4 = alloca %struct.nouveau_object*, align 8
  store %struct.nouveau_handle* %0, %struct.nouveau_handle** %2, align 8
  %5 = load %struct.nouveau_handle*, %struct.nouveau_handle** %2, align 8
  %6 = getelementptr inbounds %struct.nouveau_handle, %struct.nouveau_handle* %5, i32 0, i32 2
  %7 = load %struct.nouveau_namedb*, %struct.nouveau_namedb** %6, align 8
  store %struct.nouveau_namedb* %7, %struct.nouveau_namedb** %3, align 8
  %8 = load %struct.nouveau_handle*, %struct.nouveau_handle** %2, align 8
  %9 = getelementptr inbounds %struct.nouveau_handle, %struct.nouveau_handle* %8, i32 0, i32 1
  %10 = load %struct.nouveau_object*, %struct.nouveau_object** %9, align 8
  store %struct.nouveau_object* %10, %struct.nouveau_object** %4, align 8
  %11 = load %struct.nouveau_namedb*, %struct.nouveau_namedb** %3, align 8
  %12 = getelementptr inbounds %struct.nouveau_namedb, %struct.nouveau_namedb* %11, i32 0, i32 0
  %13 = call i32 @write_lock_irq(i32* %12)
  %14 = load %struct.nouveau_handle*, %struct.nouveau_handle** %2, align 8
  %15 = getelementptr inbounds %struct.nouveau_handle, %struct.nouveau_handle* %14, i32 0, i32 0
  %16 = call i32 @list_del(i32* %15)
  %17 = load %struct.nouveau_namedb*, %struct.nouveau_namedb** %3, align 8
  %18 = getelementptr inbounds %struct.nouveau_namedb, %struct.nouveau_namedb* %17, i32 0, i32 0
  %19 = call i32 @write_unlock_irq(i32* %18)
  %20 = call i32 @nouveau_object_ref(i32* null, %struct.nouveau_object** %4)
  ret void
}

declare dso_local i32 @write_lock_irq(i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @write_unlock_irq(i32*) #1

declare dso_local i32 @nouveau_object_ref(i32*, %struct.nouveau_object**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
